Bug 159467 - Misleading error message with path change in digikamrc file.
Summary: Misleading error message with path change in digikamrc file.
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Setup-ConfigFiles (other bugs)
Version First Reported In: unspecified
Platform: Debian stable Linux
: NOR crash
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-03-17 15:22 UTC by Sherwood Botsford
Modified: 2017-08-10 10:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sherwood Botsford 2008-03-17 15:22:48 UTC
Version:           0.8.2 built with KDE 3.5.5 (using KDE 4.0.2)
Installed from:    Debian stable Packages
OS:                Linux

Not exactly a crash:  Just won't start...

This may be related to #144253, the message is the same.

If the path in the digikamrc points to an empty directory, you get the "can't change old database to new database format"
message, and the application quits.

Changing the path by hand to point to a real directory solves the issue.

****

History:  The first time I tried digikam I had an ntfs file system mounted at /i (The same drive as it appears
on booting winsooze.)  In my search for the optimum photo app I uninstalled digikam.  This morning I reinstalled
it and started getting this message.

At this point I don't know if it was due to the directory being empty or something moving from /i to /photos when
I reformated the volume.

Messages from the startup window were of the form:
digikam: WARNING: [bool AlbumDB::execSql(const QString&, QStringList*, bool)] sq lite_compile error: unable to open database file on query: SELECT name FROM sqli te_master WHERE type='table' ORDER BY name;
digikam: WARNING: [bool AlbumDB::execSql(const QString&, QStringList*, bool)] sq lite_compile error: unable to open database file on query: SELECT value FROM Set tings WHERE keyword='Locale';
digikam: WARNING: [bool AlbumDB::execSql(const QString&, QStringList*, bool)] sq lite_compile error: unable to open database file on query: REPLACE into Settings  VALUES ('Locale','UTF-8');
digikam: WARNING: [bool AlbumDB::execSql(const QString&, QStringList*, bool)] sq lite_compile error: unable to open database file on query: SELECT name FROM sqli te_master WHERE type='table' ORDER BY name;
digikam: WARNING: Failed to open new Album Database
OggS-SEEK: at 704 want 47096 got 23104 (diff-requested 46392)
OggS-SEEK: at 47040 want 1032 got 0 (diff-requested -46008)
OggS-SEEK: at 704 want 47096 got 23104 (diff-requested 46392)
OggS-SEEK: at 47040 want 1032 got 0 (diff-requested -46008)
sgb@brightforest:~/.kde/share/apps/digikam$ khelpcenter: WARNING: Main template file name is empty.
OggS-SEEK: at 0 want 60408 got 51136 (diff-requested 60408)
OggS-SEEK: at 60352 want 520 got 0 (diff-requested -59832)


Desired behaviour:

"Digikam cannot find the database that should be at /i/{whatever}
Have you moved your photo collection?"
Comment 1 Arnd Baecker 2008-03-17 20:52:37 UTC
SVN commit 786717 by abaecker:

When upgradeDB_Sqlite2ToSqlite3 fails, this could also mean that the directory
with the Album Path is write-protected or does not exist 
(eg moved by the user). A more verbose error message is given now.

BUG: 159467
BUG: 144253



 M  +4 -1      albummanager.cpp  
 M  +1 -0      upgradedb_sqlite2tosqlite3.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=786717
Comment 2 Arnd Baecker 2008-03-17 20:54:07 UTC
Sherwood, thanks for the report, fixed in current svn by a more detailed error description as suggested.

Best, Arnd