When upgradeDB_Sqlite2ToSqlite3 fails, this could also mean that the directory with the Album Path is write-protected or does not exist (eg moved by the user). A more verbose error message is given now.

BUG: 159467
BUG: 144253


svn path=/branches/extragear/kde3/graphics/digikam/; revision=786717